Complete the project with 1 thread

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,16 @@
 CC = gcc
 FLAGS = -g -Wall
-all: main.o convolution.o matrix.o
+all: main.o
 	$(CC) $(FLAGS) -o main main.o convolution.o matrix.o
 
-main.o: main.c convolution.o matrix.o
+main.o: main.c convolution.o
 	$(CC) $(FLAGS) -c main.c
 
-convolution.o: convolution.c convolution.h
+convolution.o: convolution.c convolution.h matrix.o
 	$(CC) $(FLAGS) -c convolution.c
 
 matrix.o: matrix.c matrix.h
 	$(CC) $(FLAGS) -c matrix.c
 
 clean:
-	$(RM) main *.o
+	$(RM) main *.o binary.txt smooth.txt original.txt
