Properly documentate slice smoothing

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC = mpicc
 FLAGS = -g
 all: main.o
-	$(CC) $(FLAGS) -o main main.o convolution.o matrix.o debug.o
+	$(CC) $(FLAGS) -o main main.o convolution.o matrix.o debug.o slice.o
 
-main.o: main.c convolution.o debug.o
+main.o: main.c convolution.o debug.o slice.o
 	$(CC) $(FLAGS) -c main.c
 
 convolution.o: convolution.c convolution.h matrix.o debug.o
@@ -14,6 +14,9 @@ matrix.o: matrix.c matrix.h
 
 debug.o: debug.c debug.h
 	$(CC) $(FLAGS) -c debug.c
+
+slice.o: slice.c slice.h
+	$(CC) $(FLAGS) -c slice.c
 
 clean:
 	$(RM) main *.o binary.txt smooth.txt original.txt
