Introduce well-documented util functions

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC = mpicc
 FLAGS = -g
 all: main.o
-	$(CC) $(FLAGS) -o main main.o convolution.o matrix.o debug.o slice.o
+	$(CC) $(FLAGS) -o main main.o convolution.o matrix.o debug.o slice.o util.o
 
-main.o: main.c convolution.o debug.o slice.o
+main.o: main.c convolution.o debug.o slice.o util.o
 	$(CC) $(FLAGS) -c main.c
 
 convolution.o: convolution.c convolution.h matrix.o debug.o
@@ -17,6 +17,9 @@ debug.o: debug.c debug.h
 
 slice.o: slice.c slice.h
 	$(CC) $(FLAGS) -c slice.c
+
+util.o: util.c util.h
+	$(CC) $(FLAGS) -c util.c
 
 clean:
 	$(RM) main *.o binary.txt smooth.txt original.txt
